--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Igor Bianchi <igorgbianchi@gmail.com>"]
 [tool.poetry.dependencies]
 python = "3.9.4"
 nltk = "^3.7"
+click = "^8.1.3"
 
 [tool.poetry.dev-dependencies]
 flake518 = "^1.3.0"
