--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Igor Bianchi <igorgbianchi@gmail.com>"]
 python = "3.9.4"
 nltk = "^3.7"
 click = "^8.1.3"
+pydantic = "^1.10.2"
 
 [tool.poetry.dev-dependencies]
 flake518 = "^1.3.0"
@@ -41,6 +42,10 @@ warn_unused_ignores = true
 disallow_any_generics = true
 check_untyped_defs = true
 disallow_untyped_defs = true
+plugins = [
+    "pydantic.mypy"
+]
+
 
 [tool.pytest.ini_options]
 pythonpath = [
@@ -52,3 +57,9 @@ module = [
     'nltk.*',
 ]
 ignore_missing_imports = true
+
+[tool.pydantic-mypy]
+init_forbid_extra = true
+init_typed = true
+warn_required_dynamic_aliases = true
+warn_untyped_fields = true
